Fixed bug of project goals resetting and mobile not showing properly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,8 @@ i.material-icons {
   position: relative;
   bottom: -5px;
 }
+
+.btn i.material-icons {
+  position: relative;
+  bottom: 0px;
+}
